5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4414/executions/1573_1330.log
== TEST (2019-03-25 15:09:02) 
-- CODE:
amigos= 6.00
conta= 250.00

renda= 250.00/6.00
print("renda")
-- OUTPUT:
renda
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 15:09:09) 
-- CODE:
amigos= 6.00
conta= 250.00

renda = 250.00/6.00
print("renda")
-- OUTPUT:
renda
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 15:10:29) 
-- CODE:
amigos= 6.00
conta= 250.00

renda = conta/amigos
print("renda")
-- OUTPUT:
renda
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 15:10:36) 
-- CODE:
amigos= 6.00
conta= 250.00

renda = conta/amigos

-- OUTPUT:
renda
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 15:11:46) 
-- CODE:
amigos= 6.00
conta= 250.00

renda = conta//amigos
print("renda")

-- OUTPUT:
renda
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 15:11:52) 
-- CODE:
amigos= 6.00
conta= 250.00

renda = conta//amigos
print(renda)

-- OUTPUT:
41.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 15:12:44) 
-- CODE:
amigos= 6.00
conta= 250.00

renda = conta//amigos
print(renda)

-- EXECUTION TIME:
0.222429
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 15:13:21) 
-- CODE:
amigos= 6.00
conta= 250.00

print(250.00/6.00)

-- OUTPUT:
41.666666666666664
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 15:13:27) 
-- CODE:
amigos= 6.00
conta= 250.00

print(250.00/6.00)

-- EXECUTION TIME:
0.211807
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41.666666666666664
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 15:13:33) 
-- CODE:
amigos= 6.00
conta= 250.00

print(250.00/6.00)

-- OUTPUT:
41.666666666666664
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 15:13:52) 
-- CODE:
amigos= 6
conta= 250

print(250/6)

-- OUTPUT:
41.666666666666664
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 15:17:00) 
-- CODE:
amigos= 6
conta= 250

printf(renda=250/6)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    printf(renda=250/6)
NameError: name 'printf' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 15:17:08) 
-- CODE:
amigos= 6
conta= 250

printf(250/6)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    printf(250/6)
NameError: name 'printf' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 15:17:14) 
-- CODE:
amigos= 6
conta= 250

printf(250/6)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    printf(250/6)
NameError: name 'printf' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 15:17:39) 
-- CODE:
amigos= 6
conta= 250

print(250/6)


-- OUTPUT:
41.666666666666664
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 15:19:56) 
-- CODE:
amigos= 6
conta= 250

print("250/6", x)



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print("250/6", x)
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 15:20:05) 
-- CODE:
amigos= 6
conta= 250

print("250/6";x)



-- ERROR:
File "XXXX", line 4
    print("250/6";x)
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 15:20:11) 
-- CODE:
amigos= 6
conta= 250

print("250/6")



-- OUTPUT:
250/6
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 15:20:17) 
-- CODE:
amigos= 6
conta= 250

print(250/6)



-- OUTPUT:
41.666666666666664
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 15:20:52) 
-- CODE:
amigos = 6
conta = 250

x = conta//amigos
print(x)




-- OUTPUT:
41
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 15:21:16) 
-- CODE:
amigos = 6.00
conta = 250.00

x = conta//amigos
print(x)




-- OUTPUT:
41.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 15:21:27) 
-- CODE:
amigos = 6.00
conta = 250.00

x = conta/amigos
print(x)




-- OUTPUT:
41.666666666666664
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 15:22:35) 
-- CODE:
amigos = 6.00
conta = 250.00

x = conta/amigos
print(x)

print(round(x, 2))


-- OUTPUT:
41.666666666666664
41.67
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 15:22:49) 
-- CODE:
amigos = 6.00
conta = 250.00

x = conta/amigos


print(round(x, 2))


-- OUTPUT:
41.67
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 15:22:55) 
-- CODE:
amigos = 6.00
conta = 250.00

x = conta/amigos


print(round(x, 2))


-- EXECUTION TIME:
0.167326
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41.67
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
